Fix incorrect terminology

--- a/chapter6.tex
+++ b/chapter6.tex
@@ -248,13 +248,13 @@ Es extremadamente importante que el sistema se defienda ante situaciones de cicl
 
     \item \( \mathrm{SoC}_{t} \) es el \gls{soc} de la batería en el periodo \( t \) en \si{{\mega\watt\hour}}.
 
-    \item \( \mathrm{SoC}_{\text{min}} \) y \( \mathrm{SoC}_{\text{max}} \) son los límites mínimo y máximo del \gls{soc} de la batería en porcentaje (\%).
+    \item \( \mathrm{SoC}_{\text{min}} \) y \( \mathrm{SoC}_{\text{max}} \) son los límites mínimo y máximo del \gls{soc} de la batería.
 
     \item \( E_{\text{cap}} \) es la capacidad de almacenamiento de la batería en \si{{\mega\watt\hour}}.
 
-    \item \( D \) es la disponibilidad de la batería en porcentaje (\%).
+    \item \( D \) es la disponibilidad de la batería.
 
-    \item \( \mathrm{SoC}_{\text{tol}} \) es la tolerancia del punto álgido en porcentaje (\%).
+    \item \( \mathrm{SoC}_{\text{tol}} \) es la tolerancia del punto álgido.
 
     \item \( B_{\text{inf}, t} \) y \( B_{\text{sup}, t} \) son los indicadores de los punto álgidos inferior y superiores en el periodo \( t \).
 
